--- a/clusters/cl01tl/deployment/stack/templates/application-set.yaml
+++ b/clusters/cl01tl/deployment/stack/templates/application-set.yaml
@@ -3,11 +3,11 @@
 apiVersion: argoproj.io/v1alpha1
 kind: ApplicationSet
 metadata:
-  name: "{{ $stack.name }}-{{ $.Values.destination }}"
+  name: "{{ $stack.name }}-{{ $.Values.destination }}-{{ $.Values.name }}"
   namespace: {{ $.Release.Namespace }}
   labels:
-    app.kubernetes.io/name: "{{ $stack.name }}-{{ $.Values.destination }}"
-    app.kubernetes.io/instance: "{{ $stack.name }}-{{ $.Values.destination }}"
+    app.kubernetes.io/name: "{{ $stack.name }}-{{ $.Values.destination }}-{{ $.Values.name }}"
+    app.kubernetes.io/instance: "{{ $stack.name }}-{{ $.Values.destination }}-{{ $.Values.name }}"
     app.kubernetes.io/version: {{ $.Chart.AppVersion }}
     app.kubernetes.io/component: argocd
     app.kubernetes.io/part-of: {{ $.Release.Name }}
@@ -23,7 +23,7 @@ spec:
           - path: "clusters/{{ $.Values.destination }}/{{ $stack.name }}/*"
   template:
     metadata:
-      name: "{{ `{{path.basename}}` }}-{{ $.Values.destination }}"
+      name: "{{ `{{path.basename}}` }}-{{ $.Values.destination }}-{{ $.Values.name }}"
       finalizers:
         - resources-finalizer.argocd.argoproj.io
     spec:
