--- a/clusters/cl01tl/applications/ghost/Chart.yaml
+++ b/clusters/cl01tl/applications/ghost/Chart.yaml
@@ -7,7 +7,14 @@ sources:
   - https://github.com/cloudflare/cloudflared
   - https://github.com/bjw-s/helm-charts/blob/main/charts/other/app-template/values.yaml
 dependencies:
-
+  - name: app-template
+    alias: ghost
+    repository: https://bjw-s.github.io/helm-charts/
+    version: 3.1.0
+  - name: app-template
+    alias: cloudflared
+    repository: https://bjw-s.github.io/helm-charts/
+    version: 3.1.0
   - name: mysql-cluster
     alias: mysql-8-cluster
     version: 0.1.0
